styles/globals.css
/* ... */
#__next {
  min-height: 100vh;
  min-height: 100dvh;
}

html,
body {
  @apply text-neutral-800 dark:text-silver;
  @apply antialiased;
  @apply text-base;

  @apply selection:bg-indigo-500 selection:text-white dark:selection:bg-indigo-900;
  text-rendering: optimizeLegibility;
  font-feature-settings:
    "kern" on,
    "liga" on,
    "cv05" on,
    "cv10" on;
  font-variation-settings: "opsz" 15;
}

p {
  @apply mb-6;
  @apply last-of-type:mb-0;
  @apply leading-relaxed;
}

a[href^="mailto:"] {
  @apply cursor-alias;
}

[cmdk-overlay] {
  @apply bg-neutral-900/[.20];
  @apply dark:bg-black/[.70];
  @apply fixed left-0 top-0;
  @apply h-full w-full;
  @apply z-20;
  @apply backdrop-blur-sm backdrop-saturate-150;
}

[cmdk-dialog] {
  @apply max-w-md;
  @apply w-full;
  @apply fixed left-1/2 top-[20%];
  @apply flex items-start justify-center;
  @apply -translate-x-1/2;
  @apply z-20;
  @apply px-4;
}

[cmdk-root] {
  @apply relative;
  @apply bg-white/[.98];
  @apply dark:bg-neutral-900/[.98];
  @apply border-transparent;
  @apply dark:border-neutral-800;
  @apply border;
  @apply rounded-xl;
  @apply backdrop-blur-lg;
  @apply w-full;
  @apply shadow-fancy;
  @apply dark:shadow-dark;
}

[cmdk-input] {
  @apply appearance-none;
  @apply text-neutral-800 dark:text-silver;
  @apply placeholder:text-neutral-400 dark:placeholder:text-neutral-600;
  @apply bg-transparent;
  @apply w-full;
  @apply px-5 py-3 pb-0;
  /* @apply border-b dark:border-neutral-800; */
  @apply outline-none;
  @apply text-lg;
}

[cmdk-list] {
  @apply px-2 py-2;
  @apply transition-all;
  height: calc(var(--cmdk-list-height) + 16px);
}

[cmdk-item] {
  @apply px-3;
  @apply flex items-center gap-2;
  @apply px-3 py-2;
  @apply rounded-md;
  @apply cursor-pointer;
  @apply text-neutral-600 dark:text-silver-dark;
  @apply transition-colors;
  @apply [font-variation-settings:'wght'_420];
}

[cmdk-item][aria-selected] {
  @apply bg-neutral-100 dark:bg-neutral-800;
  @apply text-neutral-800 dark:text-silver;
}

[cmdk-item]:active {
  @apply bg-neutral-200/[.9] dark:bg-neutral-700;
  @apply text-neutral-800 dark:text-silver;
}

[cmdk-empty] {
  @apply px-3 py-3;
  @apply text-sm font-medium text-neutral-600 [font-variation-settings:'opsz'_12] dark:text-silver-dark;
}

[cmdk-separator] {
  @apply border-b dark:border-neutral-800;
  @apply my-2;
}

[cmdk-group-heading] {
  @apply px-3 py-2;
  @apply text-xs font-medium text-neutral-600 [font-variation-settings:'opsz'_12] dark:text-silver-dark;
}

[cmdk-loading] {
  @apply absolute;
  @apply top-3;
  @apply right-3;
  @apply text-neutral-400 dark:text-neutral-600;
  @apply animate-fadeIn;
}

[cmdk-loading] div {
  @apply flex;
}

/* Animations */

.island-enter {
  @apply scale-50 opacity-[.01];
}

.island-enter.island-enter-active {
  @apply scale-100 opacity-100;
  @apply transition-all duration-500 ease-spring;
}

.island-leave {
  @apply scale-100 opacity-100;
}

.island-leave.island-leave-active {
  @apply scale-50 opacity-[.01];
  @apply transition-all duration-300 ease-in-out;
}

.tooltip-enter {
  @apply -translate-y-1 opacity-[.01];
}

.tooltip-enter.tooltip-enter-active {
  @apply translate-y-0 opacity-100;
  @apply transition-all duration-200 ease-in-out;
}

.tooltip-leave {
  @apply translate-y-0 opacity-100;
}

.tooltip-leave.tooltip-leave-active {
  @apply -translate-y-1 opacity-[.01];
  @apply transition-all duration-200 ease-in-out;
}

.pin-city {
  @apply border-fuchsia-500/10;
  @apply bg-fuchsia-500/60;
}

.pin-place {
  @apply border-purple-500/10;
  @apply bg-purple-500/60;
}

.pin-airport {
  @apply border-rose-500/10;
  @apply bg-rose-500/60;
}

.pin-country {
  @apply border-green-500/10;
  @apply bg-green-500/60;
}

.pin-neighborhood {
  @apply border-orange-500/10;
  @apply bg-orange-500/60;
}

.pin-hotel {
  @apply border-yellow-400/10;
  @apply bg-yellow-400/60;
}

.pin-park {
  @apply border-emerald-500/10;
  @apply bg-emerald-500/60;
}

.mapboxgl-popup-tip,
.mapboxgl-popup-close-button {
  @apply hidden;
}

.mapboxgl-popup-content {
  @apply !rounded !border !border-transparent !bg-neutral-800 !px-3 !py-3 !font-sans !text-base !font-medium !text-silver ![font-variation-settings:'opsz'_15,_'wght'_500] dark:!border-white/[.08] dark:!bg-black/[.96] dark:!text-silver;
}
/* ... */

